test/errors/type/collections/set/tolist.yasl
echo collections.set().tolist(1)
