test/errors/type/collections/set/tolist.yasl.err
TypeError: collections.set.tolist expected arg in position 0 to be of type set, got arg of type int. (line 1)
